force-app/main/default/objects/Programa__c/Programa__c.object-meta.xml
<CustomObject>
    <label>Programa</label>
    <nameField>
        <label>Programa Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>