force-app/main/default/objects/Programa__c/fields/Duracion__c.field-meta.xml
<CustomField>
    <fullName>Duracion__c</fullName>
    <inlineHelpText>en años</inlineHelpText>
    <label>Duracion</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>