force-app/main/default/objects/Programa__c/fields/Evaluaciones__c.field-meta.xml
<CustomField>
    <fullName>Evaluaciones__c</fullName>
    <label>Evaluaciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>