force-app/main/default/objects/Programa__c/fields/horario__c.field-meta.xml
<CustomField>
    <fullName>horario__c</fullName>
    <label>Horario</label>
    <type>TextArea</type>
</CustomField>